<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="signUp">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeContent">To Shoe Store</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="instruction1">Online Shopping</string>
    <string name="instruction1Content">Buying anytime and anywhere.</string>
    <string name="instruction2">Fast Delivery</string>
    <string name="instruction2Content">Same day delivery</string>
    <string name="getStarted">Get Started</string>
    <string name="addItem">Add new item</string>
    <string name="scrollView">list of shoes</string>
    <string name="addNewShoe">Add New Shoe</string>
    <string name="shoeName">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoeSize">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>
