<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_textView"
            style="@style/mainStyle"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/email"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_editText"
            app:layout_constraintEnd_toStartOf="@+id/email_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/password_textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/password"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_editText"
            app:layout_constraintEnd_toStartOf="@+id/password_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/password_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/email_textView"
            app:layout_constraintTop_toBottomOf="@+id/login_textView"
            app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_editText" />

        <Button
            android:id="@+id/login_button"
            style="@style/buttonStyle"
            android:layout_marginBottom="@dimen/big_margin"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signup_button" />

        <Button
            android:id="@+id/signup_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
