<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionFragment">
    <!--Here I used ConstraintLayout because it is easier to organize views,
    and I can place them anywhere-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instruction_textView"
            style="@style/mainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruction1_text"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/big_top_margin"
            android:text="@string/instruction1"
            android:textColor="@color/design_default_color_primary_dark"
            app:layout_constraintBottom_toTopOf="@+id/instruction2_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_textView" />

        <TextView
            android:id="@+id/instruction1_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/instruction1Content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction1_text" />

        <TextView
            android:id="@+id/instruction2_text"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="72dp"
            android:text="@string/instruction2"
            android:textColor="@color/design_default_color_primary_dark"
            app:layout_constraintBottom_toTopOf="@+id/instruction2_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction1_text" />

        <TextView
            android:id="@+id/instruction2_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/instruction2Content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction2_text" />

        <Button
            android:id="@+id/getStarted_button"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/getStarted"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction2_content"
            app:layout_constraintVertical_bias="0.987" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
