<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <!--I used constraintLayout because the UI is a complex.
    If I want to do this layout by using LinearLayout,
    I must use 6 LinearLayouts and the result will be a nested layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_new_shoe_textView"
            style="@style/mainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/addItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name_textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/shoeName"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_editText"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/company_textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_editText"
            app:layout_constraintEnd_toStartOf="@+id/company_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_size_textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/shoeSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_editText"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description_textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_editText"
            app:layout_constraintEnd_toStartOf="@+id/description_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_name_editText"
            android:text="@={shoe.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/shoeName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/company_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_textView"
            app:layout_constraintTop_toBottomOf="@+id/add_new_shoe_textView"
            app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/company_editText"
            android:text="@={shoe.company}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/company_textView"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_editText" />

        <EditText
            android:id="@+id/shoe_size_editText"
            android:text="@={``+shoe.size}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/shoeSize"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/description_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_textView"
            app:layout_constraintTop_toBottomOf="@+id/company_editText" />

        <EditText
            android:id="@+id/description_editText"
            android:text="@={shoe.description}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/description_textView"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_editText" />

        <Button
            android:id="@+id/save_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/description_editText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
