<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <!--Here I used ConstraintLayout because it is easier to organize views horizontally
    by using baseline and create chains. But if I want to do this layout by using LinearLayout,
    I must use 5 LinearLayouts and it will be nested layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/shoeName"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/ShoeNameField"
            app:layout_constraintEnd_toStartOf="@+id/ShoeNameField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ShoeNameField"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@{shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/company"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/companyField"
            app:layout_constraintEnd_toStartOf="@+id/companyField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/companyField"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@{shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/ShoeNameField" />

        <TextView
            android:id="@+id/textView5"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/shoeSize"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeSizeField"
            app:layout_constraintEnd_toStartOf="@+id/shoeSizeField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoeSizeField"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@{(Double.toString(shoe.size))}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/companyField" />

        <TextView
            android:id="@+id/textView7"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/description"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/descriptionField"
            app:layout_constraintEnd_toStartOf="@+id/descriptionField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descriptionField"
            style="@style/textStyle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@{shoe.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeField" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>